kubernetes/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lua
  labels:
    app: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: hectorvido/lua-app
        name: lua
        ports:
        - name: web
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: lua
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: lua
spec:
  rules:
  - host: "lua.192-168-99-102.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
